@@ -63,16 +63,16 @@ samples do overlap then C<period_exclusive> is disabled for that DashProfiler.
 =cut
 
 sub new {
-    my ($class, $meta, $context2, $start_time, $allow_overlaping_use) = @_;
-    my $profile_ref = $meta->{_dash_profile};
+    # ($class, $meta, $context2, $start_time, $allow_overlap)
+    my $profile_ref = $_[1]->{_dash_profile}; # $meta->_dash_profile
     return if $profile_ref->{disabled};
     if ($profile_ref->{in_use}++) {
-        if ($allow_overlaping_use) {
+        if ($_[4]) { # allow_overlaping_use
             # can't use exclusive timer with nested samples
             undef $profile_ref->{exclusive_sampler};
         }
         else {
-            Carp::cluck("$class $profile_ref->{profile_name} already active")
+            Carp::cluck("$_[0] $profile_ref->{profile_name} already active")
                 unless $profile_ref->{in_use_warning_given}++; # warn once
             return; # don't double count
         }
@@ -81,10 +81,10 @@ sub new {
     # and remove the ++ from the if() above and tweak the cluck message
     #$profile_ref->{in_use} = Carp::longmess("");
     return bless [
-        $meta,
-        $context2   || $meta->{_context2},
-        $start_time || dbi_time(), # do this as late as practical
-    ] => $class;
+        $_[1],
+        $_[2] || $_[1]->{_context2},
+        $_[3] || dbi_time(), # do this as late as practical
+    ] => $_[0];
 }
 
 
