@@ -16,6 +16,14 @@ Ponder need for workaround for systems with clocks that go backwards
 Add test for throwing an exception in context2edit as way to veto sample - and document
 Add tests for set_precondition
 
+disabled should set inuse so the check for disabled can be moved inside the 'already inuse' block
+
+=head2 DashProfiler 1.12 - r
+
+  Fixed period_exclusive sample calculation of overheads.
+  Fixed period_sample to be disabled until start_period_sample() called.
+  Slight performance boost (0.000015 instead of 0.000017).
+
 =head2 DashProfiler 1.11 - r45 - Mar 24 2008
 
   Now ~17% faster (cheaper) when using DBI >= 1.603.
